Section06 fixed bugs